# team-east-backtester

./: .gitignore  LICENSE  README.md  dashboard.py  pyproject.toml  sample_strategy.py  visualizer.html
prosperity-uploader/: .gitignore  README.md  artifact_parser.py  auth.py  auth_cognito.py  auto_upload_v10_v11.sh  client.py  config.py  config.yaml  exceptions.py  graph.py  main.py  metrics.py  models.py  run_grid.sh  storage.py  submissions.py  upload_response_debug.json  uploader.py  utils.py
prosperity-uploader/optimizer/: __init__.py  adaptive.py  analysis.py  ash_config.py  ash_engines.py  auto_auth.py  codegen.py  codegen_180750.py  codegen_182338.py  codegen_advanced.py  codegen_ash_v2.py  codegen_matrix.py  codegen_signals.py  grid.py  run_s1s5.py  runner.py  staged_search.py  test_matrix.py  test_s1s5.py
prosperity-uploader/results/: matrix_full_2026-04-16_18-29-15.json  matrix_results.csv  results.sqlite  session_log.md  summary.csv
strategies/: composite_strategy.py  informed_tracker.py  market_maker.py  mean_reversion.py  momentum.py  pairs_trading.py  round0_strategy.py  round1_str.py  trend_hybrid.py
strategies/round1/: README.md  s01_pepper_maxlong_ash_baseline.py  s02_pepper_maxlong_ash_tight.py  s03_pepper_momentum_breakout.py  s04_pepper_dip_buy_peak_sell.py  s05_pairs_long_pepper_short_ash.py  s06_pepper_ladder_accumulate.py  s07_pepper_trailing_stop.py  s08_regime_adaptive.py  s09_combined_best.py
strategies/round2/: _r2_notes.md  (+45 more)
teameastbt/: __main__.py  data.py  file_reader.py  metrics.py  models.py  parse_submission_logs.py  runner.py
(+2776 files in other folders)
