[project]
name = "teameastbt"
description = "Backtester for IMC Prosperity 4 algorithms — Team East"
version = "0.1.0"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "Team East"}]
keywords = ["imc", "prosperity", "backtest", "backtester"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
requires-python = ">= 3.9"
dependencies = [
    "ipython>=8.18.1",
    "jsonpickle>=4.0.2",
    "orjson>=3.10.15",
    "tqdm>=4.67.1",
    "typer>=0.15.2",
    "streamlit>=1.30.0",
    "plotly>=5.18.0",
    "pandas>=2.0.0",
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
teameastbt = "teameastbt.__main__:main"

[tool.setuptools.packages.find]
include = ["teameastbt", "teameastbt.*"]

[tool.setuptools.package-data]
teameastbt = ["resources/*/*.csv"]

[tool.uv]
dev-dependencies = [
    "mypy>=1.15.0",
    "ruff>=0.9.7",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["I"]

[tool.mypy]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "teameastbt.datamodel"
ignore_errors = true
